Add support for client_credentials grant in HTTP utilities
Implement OAuth 2.0 client_credentials flow for token management, enabling automatic fetching, caching, and refreshing of bearer tokens. Update `ManagedFhirWebAccessor`, `HTTPTokenManager`, and related classes to handle client_credentials authentication, including token invalidation and 401/403 retries. Extend `ServerDetailsPOJO` and authentication modes to support this functionality.